feat: Add ExternalSecret configuration and update application description in values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/home-automation/home-assistant/values.yaml
+++ b/charts/home-automation/home-assistant/values.yaml
@@ -15,8 +15,9 @@ application:
   name: Home Assistant
   group: Home Automation
   icon: mdi:home-assistant
+  iconColor: skyblue
   image: https://upload.wikimedia.org/wikipedia/commons/6/6e/Home_Assistant_Logo.svg
-  description: "Home Assistant integration."
+  description: "Home Automation"
   port: 8123
   location: 100
 
