feat: Add system-reservation Helm chart with configuration and templates
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/base.yaml
+++ b/cluster/templates/base.yaml
@@ -33,6 +33,9 @@ spec:
           group: infrastructure
         - name: openshift-nfd
           group: infrastructure
+        - name: system-reservation
+          group: infrastructure
+          createNamespace: false
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
