feat: Update workflows and configurations to target 'v2' branch; add ADSB Helm chart and related templates
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -4,7 +4,7 @@ name: "Renovate"
 
 on:
   push:
-    branches: ["main"]
+    branches: ["v2"]
     paths:
       - renovate.json5
       - .renovate/**.json5
