--- a/.github/workflows/label-sync.yaml
+++ b/.github/workflows/label-sync.yaml
@@ -5,7 +5,7 @@ name: Label Sync
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches: ["v2"]
     paths: [".github/labels.yaml"]
   schedule:
     - cron: "0 0 * * *" # Every day at midnight
