--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -5,7 +5,7 @@ name: Labeler
 on:
   workflow_dispatch:
   pull_request:
-    branches: ["main"]
+    branches: ["v2"]
 
 permissions:
   contents: read
