--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -3,7 +3,7 @@ name: Validate
 on:
   workflow_dispatch:
   pull_request:
-    branches: ["main"]
+    branches: ["v2"]
 
 permissions:
   contents: read
