feat: Update SecurityContextConstraints to enhance security settings
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/radio/adsb/templates/securitycontextconstraints.yaml
+++ b/charts/radio/adsb/templates/securitycontextconstraints.yaml
@@ -12,6 +12,11 @@ seLinuxContext:
   type: RunAsAny
 supplementalGroups:
   type: RunAsAny
+allowPrivilegedContainer: true
+allowHostNetwork: true
+allowHostPorts: true
+allowHostDirVolumePlugin: true
+allowPrivilegeEscalation: true
 users:
   - system:serviceaccount:{{ .Release.Namespace }}:{{ .Release.Name }}
 {{- end }}
