feat: Remove keepalived annotations from dump978, planewatch, and ultrafeeder services; update ULTRAFEEDER_CONFIG for planewatch
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/radio/adsb/values.yaml
+++ b/charts/radio/adsb/values.yaml
@@ -29,7 +29,7 @@ pods:
       ULTRAFEEDER_CONFIG: |
         adsb,adsb-dump978,30978,uat_in;
         mlathub,adsb-flightaware-mlat-beast-output,30105,beast_in;
-        mlathub,adsb-planewatch-mlat-beast-output,30105,beast_in;
+        mlathub,adsb-planewatch,30105,beast_in;
         adsb,feed1.adsbexchange.com,30004,beast_reduce_plus_out;
         mlat,feed.adsbexchange.com,31090,39008;
         adsb,in.adsb.lol,30004,beast_reduce_plus_out;
