feat: Update tweaks.yaml to enhance application set configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/tweaks.yaml
+++ b/cluster/templates/tweaks.yaml
@@ -11,6 +11,7 @@ spec:
     - list:
         elements:
         - name: disable-worker-secondary-interfaces
+        - name: disable-master-secondary-interfaces
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
