feat: Add FlightAware service, statefulset, and route configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/radio/adsb/values.yaml
+++ b/charts/radio/adsb/values.yaml
@@ -85,3 +85,13 @@ pods:
       tag: v0.0.4
     env:
       BEASTHOST: 'adsb-ultrafeeder'
+
+  flightaware:
+    image:
+      repository: ghcr.io/sdr-enthusiasts/docker-piaware
+      # renovate: datasource=docker depName=ghcr.io/sdr-enthusiasts/docker-piaware versioning=semver
+      tag: v9.0.1
+    env:
+      BEASTHOST: 'adsb-ultrafeeder'
+      UAT_RECEIVER_TYPE: 'relay'
+      UAT_RECEIVER_HOST: 'adsb-dump978'
