--- a/charts/radio/adsb/values.yaml
+++ b/charts/radio/adsb/values.yaml
@@ -95,3 +95,27 @@ pods:
       BEASTHOST: 'adsb-ultrafeeder'
       UAT_RECEIVER_TYPE: 'relay'
       UAT_RECEIVER_HOST: 'adsb-dump978'
+
+  flightradar24:
+    image:
+      repository: ghcr.io/sdr-enthusiasts/docker-flightradar24
+      # renovate: datasource=docker depName=ghcr.io/sdr-enthusiasts/docker-flightradar24 versioning=loose
+      tag: 1.0.48-0
+    env:
+      BEASTHOST: 'adsb-ultrafeeder'
+
+  adsbhub:
+    image:
+      repository: ghcr.io/sdr-enthusiasts/docker-adsbhub
+      # renovate: datasource=docker depName=ghcr.io/sdr-enthusiasts/docker-adsbhub versioning=semver
+      tag: 1.06
+    env:
+      SBSHOST: 'adsb-ultrafeeder'
+
+  opensky:
+    image:
+      repository: ghcr.io/sdr-enthusiasts/docker-opensky-network
+      # renovate: datasource=docker depName=ghcr.io/sdr-enthusiasts/docker-opensky-network versioning=loose
+      tag: 2.1.7-1
+    env:
+      SBSHOST: 'adsb-ultrafeeder'
