fix: Correct SBSHOST to BEASTHOST for opensky service configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/radio/adsb/values.yaml
+++ b/charts/radio/adsb/values.yaml
@@ -118,4 +118,4 @@ pods:
       # renovate: datasource=docker depName=ghcr.io/sdr-enthusiasts/docker-opensky-network versioning=loose
       tag: 2.1.7-1
     env:
-      SBSHOST: 'adsb-ultrafeeder'
+      BEASTHOST: 'adsb-ultrafeeder'
