--- a/.renovate/customManagers.json5
+++ b/.renovate/customManagers.json5
@@ -2,15 +2,13 @@
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   customManagers: [
     {
-        customType: 'regex',
-        datasourceTemplate: "{{#if datasource}}{{{datasource}}}{{else}}github-releases{{/if}}",
-        description: 'Process annotated dependencies',
-        managerFilePatterns: [
-            "/(^|/).+\\.ya?ml(?:\\.j2)?$/",
-        ],
-        matchStrings: [
-            // # renovate: datasource=docker depName=ghcr.io/repo/package
-            "datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)\\n.+/(?<currentValue>(v|\\d)[^/]+)",
-        ],
+      customType: "regex",
+      datasourceTemplate: "{{#if datasource}}{{{datasource}}}{{else}}github-releases{{/if}}",
+      description: "Process annotated dependencies",
+      managerFilePatterns: ["/(^|/).+\\.ya?ml(?:\\.j2)?$/"],
+      matchStrings: [
+        "datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)\\n.+/(?<currentValue>(v|\\d)[^/]+)",
+      ],
     },
+  ],
 }
