fix: Update app-id and private-key in labeler workflow; add helm chart dependencies task; update images and icons in values.yaml files
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/home-automation/home-assistant/values.yaml
+++ b/charts/home-automation/home-assistant/values.yaml
@@ -16,7 +16,7 @@ application:
   group: Home Automation
   icon: mdi:home-assistant
   iconColor: skyblue
-  image: https://upload.wikimedia.org/wikipedia/commons/6/6e/Home_Assistant_Logo.svg
+  image: https://upload.wikimedia.org/wikipedia/en/4/49/Home_Assistant_logo_%282023%29.svg
   description: "Home Automation"
   port: 8123
   location: 100
