--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   pull_request:
     branches: ["v2"]
+  push:
+    branches: ["renovate/**"]
 
 permissions:
   contents: read
