--- a/renovate.json5
+++ b/renovate.json5
@@ -16,21 +16,28 @@
     ":timezone(America/New_York)",
   ],
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
-  suppressNotifications: [
-    "prEditedNotification",
-    "prIgnoreNotification",
-  ],
-  ignorePaths: [
-    "**/*.sops.*",
-    "**/resources/**",
-  ],
+  suppressNotifications: ["prEditedNotification", "prIgnoreNotification"],
+  ignorePaths: ["**/*.sops.*", "**/resources/**"],
+  ignoreDeps: ["registry.redhat.com/**"],
   flux: {
-    managerFilePatterns: ["/(^|/)charts/.+\\.ya?ml$/","/(^|/)cluster/.+\\.ya?ml$/","/(^|/)role/.+\\.ya?ml$/"]
+    managerFilePatterns: [
+      "/(^|/)charts/.+\\.ya?ml$/",
+      "/(^|/)cluster/.+\\.ya?ml$/",
+      "/(^|/)role/.+\\.ya?ml$/",
+    ],
   },
   "helm-values": {
-    managerFilePatterns: ["/(^|/)charts/.+\\.ya?ml$/","/(^|/)cluster/.+\\.ya?ml$/","/(^|/)role/.+\\.ya?ml$/"]
+    managerFilePatterns: [
+      "/(^|/)charts/.+\\.ya?ml$/",
+      "/(^|/)cluster/.+\\.ya?ml$/",
+      "/(^|/)role/.+\\.ya?ml$/",
+    ],
   },
   kubernetes: {
-    managerFilePatterns: ["/(^|/)charts/.+\\.ya?ml$/","/(^|/)cluster/.+\\.ya?ml$/","/(^|/)role/.+\\.ya?ml$/"]
+    managerFilePatterns: [
+      "/(^|/)charts/.+\\.ya?ml$/",
+      "/(^|/)cluster/.+\\.ya?ml$/",
+      "/(^|/)role/.+\\.ya?ml$/",
+    ],
   },
 }
