fix: update ignoreDeps for Red Hat registries in renovate configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/renovate.json5
+++ b/renovate.json5
@@ -18,7 +18,7 @@
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
   suppressNotifications: ["prEditedNotification", "prIgnoreNotification"],
   ignorePaths: ["**/*.sops.*", "**/resources/**"],
-  ignoreDeps: ["registry.redhat.com/**"],
+  ignoreDeps: ["registry.connect.redhat.com/**", "registry.redhat.io/**"],
   flux: {
     managerFilePatterns: [
       "/(^|/)charts/.+\\.ya?ml$/",
