--- a/renovate.json5
+++ b/renovate.json5
@@ -18,7 +18,10 @@
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
   suppressNotifications: ["prEditedNotification", "prIgnoreNotification"],
   ignorePaths: ["**/*.sops.*", "**/resources/**"],
-  ignoreDeps: ["registry.connect.redhat.com/**", "registry.redhat.io/**"],
+  ignoreDeps: [
+    "registry.connect.redhat.com/intel/intel-gpu-plugin",
+    "registry.redhat.io/openshift4/ose-node-feature-discovery-rhel9",
+  ],
   flux: {
     managerFilePatterns: [
       "/(^|/)charts/.+\\.ya?ml$/",
