--- a/.renovate/allowedVersions.json5
+++ b/.renovate/allowedVersions.json5
@@ -6,5 +6,10 @@
       matchPackageNames: ["ghcr.io/linuxserver/calibre-web"],
       allowedVersions: "<1",
     },
+    {
+      matchDatasources: ["docker"],
+      matchPackageNames: ["ghcr.io/home-operations/radarr"],
+      allowedVersions: "<5",
+    },
   ],
 }
