feat(secrets): implement ExternalSecret for LiteLLM and Open WebUI configurations
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/statefulset.yaml
+++ b/charts/ai/litellm/templates/statefulset.yaml
@@ -53,9 +53,9 @@ spec:
             value: {{ .Release.Name }}-redis
           - name: REDIS_PORT
             value: "6379"
-          {{ range $key, $value := .Values.pods.main.env }}- name: {{ $key }}
-            value: {{ $value }}
-          {{ end }}
+          envFrom:
+            - secretRef:
+                name: {{ .Release.Name }}
           image: {{ .Values.pods.main.image.repository }}:{{ .Values.pods.main.image.tag }}
           imagePullPolicy: IfNotPresent
           args:
