feat(application): update application group from Media to Infrastructure
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/k10-kasten-operator/values.yaml
+++ b/charts/infrastructure/k10-kasten-operator/values.yaml
@@ -13,7 +13,7 @@ cluster:
 
 application:
   name: Kasten K10
-  group: Media
+  group: Infrastructure
   icon: material-symbols:backup-outline
   iconColor: ""
   image: "https://docs.kasten.io/img/favicon_228x228px.png"
