feat: update application API version to v1alpha3 and add tags field
- Updated application API version from v1alpha2 to v1alpha3 in multiple charts.
- Added 'tags' field with value 'admin' to application specifications in various charts.
- Modified links.yaml templates to reflect the new API version and include tags in the application metadata.
- Updated values.yaml files to include tags for applications across different charts.
- Incremented startpunkt chart version from 1.3.0 to 2.0.0.

Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/links.yaml
+++ b/charts/ai/litellm/templates/links.yaml
@@ -24,9 +24,9 @@ spec:
     imageURL: {{ .Values.application.image | quote }}
   text: {{ .Values.application.name | quote }}
 {{- end }}
-{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha2" }}
+{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha3" }}
 ---
-apiVersion: startpunkt.ullberg.us/v1alpha2
+apiVersion: startpunkt.ullberg.us/v1alpha3
 kind: Application
 metadata:
   name: {{ .Release.Name }}
@@ -38,4 +38,5 @@ spec:
   url: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/ui
   info: {{ .Values.application.description | quote }}
   location: {{ .Values.application.location }}
+  tags: {{ .Values.application.tags | quote }}
 {{- end }}
