--- a/charts/productivity/startpunkt/templates/console-link.yaml
+++ b/charts/productivity/startpunkt/templates/console-link.yaml
@@ -1,6 +1,6 @@
-{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha2" }}
+{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha3" }}
 ---
-apiVersion: startpunkt.ullberg.us/v1alpha2
+apiVersion: startpunkt.ullberg.us/v1alpha3
 kind: Application
 metadata:
   name: openshift-console
@@ -12,4 +12,5 @@ spec:
   url: http://console-openshift-console.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/dashboards
   info: OpenShift console
   location: 100
+  tags: admin
 {{- end }}
