--- a/charts/productivity/startpunkt/templates/github-link.yaml
+++ b/charts/productivity/startpunkt/templates/github-link.yaml
@@ -1,6 +1,6 @@
-{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha2" }}
+{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha3" }}
 ---
-apiVersion: startpunkt.ullberg.us/v1alpha2
+apiVersion: startpunkt.ullberg.us/v1alpha3
 kind: Application
 metadata:
   name: github
@@ -10,4 +10,5 @@ spec:
   icon: simple-icons:github
   url: {{ .Values.spec.source.repoURL }}
   info: GitHub Repo
+  tags: admin
 {{- end }}
