--- a/charts/productivity/startpunkt/templates/gitops-link.yaml
+++ b/charts/productivity/startpunkt/templates/gitops-link.yaml
@@ -1,6 +1,6 @@
-{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha2" }}
+{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha3" }}
 ---
-apiVersion: startpunkt.ullberg.us/v1alpha2
+apiVersion: startpunkt.ullberg.us/v1alpha3
 kind: Application
 metadata:
   name: gitops
@@ -10,4 +10,5 @@ spec:
   icon: simple-icons:argo
   url: https://openshift-gitops-server-openshift-gitops.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   info: GitOps
+  tags: admin
 {{- end }}
