--- a/charts/infrastructure/k10-kasten-operator/templates/links.yaml
+++ b/charts/infrastructure/k10-kasten-operator/templates/links.yaml
@@ -24,9 +24,9 @@ spec:
     imageURL: {{ .Values.application.image | quote }}
   text: {{ .Values.application.name | quote }}
 {{- end }}
-{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha2" }}
+{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha3" }}
 ---
-apiVersion: startpunkt.ullberg.us/v1alpha2
+apiVersion: startpunkt.ullberg.us/v1alpha3
 kind: Application
 metadata:
   name: {{ .Release.Name }}
@@ -39,4 +39,5 @@ spec:
   url: https://k10-route-kasten-io.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   info: {{ .Values.application.description | quote }}
   location: {{ .Values.application.location }}
+  tags: {{ .Values.application.tags | quote }}
 {{- end }}
