--- a/charts/infrastructure/k10-kasten-operator/values.yaml
+++ b/charts/infrastructure/k10-kasten-operator/values.yaml
@@ -19,6 +19,7 @@ application:
   image: "https://docs.kasten.io/img/favicon_228x228px.png"
   description: "Manages backups and disaster recovery"
   location: 0
+  tags: admin
 
 kasten:
   # Custom applications to exclude from Kasten K10 backups
