--- a/charts/productivity/bookmarks/templates/unifi.yaml
+++ b/charts/productivity/bookmarks/templates/unifi.yaml
@@ -1,6 +1,6 @@
-{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha2" }}
+{{- if .Capabilities.APIVersions.Has "startpunkt.ullberg.us/v1alpha3" }}
 ---
-apiVersion: startpunkt.ullberg.us/v1alpha2
+apiVersion: startpunkt.ullberg.us/v1alpha3
 kind: Application
 metadata:
   name: unifi
@@ -10,4 +10,5 @@ spec:
   icon: arcticons:unifi-network
   url: http://unifi.{{ .Values.cluster.top_level_domain }}:8443
   info: Manage WIFI
+  tags: admin
 {{- end }}
