--- a/charts/media/posterizarr/values.yaml
+++ b/charts/media/posterizarr/values.yaml
@@ -21,4 +21,8 @@ pods:
     image:
       repository: ghcr.io/fscorrupt/posterizarr
       # renovate: datasource=docker depName=ghcr.io/fscorrupt/posterizarr versioning=semver
-      tag: 1.9.91
+      tag: 1.9.89
+
+webhook:
+  enabled: true
+  port: 8080
