fix(deployment): update allowedVersions for postgres to <18
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.renovate/allowedVersions.json5
+++ b/.renovate/allowedVersions.json5
@@ -11,5 +11,10 @@
       matchPackageNames: ["ghcr.io/home-operations/radarr"],
       allowedVersions: "<6",
     },
+    {
+      matchDatasources: ["docker"],
+      matchPackageNames: ["postgres"],
+      allowedVersions: "<18",
+    },
   ],
 }
