--- a/charts/ai/litellm/templates/db-deployment.yaml
+++ b/charts/ai/litellm/templates/db-deployment.yaml
@@ -21,6 +21,7 @@ spec:
         service: db
     spec:
       containers:
+        # renovate: datasource=docker depName=postgres versioning=docker
         - image: postgres:17.3
           name: postgres
           resources:
