fix(allowedVersions): update matchDatasources to include helm for package rules
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.renovate/allowedVersions.json5
+++ b/.renovate/allowedVersions.json5
@@ -2,17 +2,17 @@
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   packageRules: [
     {
-      matchDatasources: ["docker"],
+      matchDatasources: ["docker", "helm"],
       matchPackageNames: ["ghcr.io/linuxserver/calibre-web"],
       allowedVersions: "<1",
     },
     {
-      matchDatasources: ["docker"],
+      matchDatasources: ["docker", "helm"],
       matchPackageNames: ["ghcr.io/home-operations/radarr"],
       allowedVersions: "<6",
     },
     {
-      matchDatasources: ["docker"],
+      matchDatasources: ["docker", "helm"],
       matchPackageNames: ["postgres"],
       allowedVersions: "<18",
     },
