--- a/charts/ai/litellm/values.yaml
+++ b/charts/ai/litellm/values.yaml
@@ -22,7 +22,7 @@ pods:
   main:
     image:
       repository: ghcr.io/berriai/litellm-non_root
-      # renovate: datasource=docker depName=ghcr.io/berriai/litellm-non_root versioning=semver
+      # renovate: datasource=docker depName=ghcr.io/berriai/litellm-non_root versioning=loose
       tag: main-v1.75.8-stable
 
   redis:
