fix(db-deployment): update postgres image to use values from values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/litellm/templates/db-deployment.yaml
+++ b/charts/ai/litellm/templates/db-deployment.yaml
@@ -21,9 +21,8 @@ spec:
         service: db
     spec:
       containers:
-        # renovate: datasource=docker depName=postgres versioning=docker
-        - image: postgres:17.6
-          name: postgres
+        - name: postgres
+          image: {{ .Values.pods.db.image.repository }}:{{ .Values.pods.db.image.tag }}
           resources:
             limits:
               cpu: "4"
