fix(allowedVersions): add duplicate rule for postgres to matchDatasources
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.renovate/allowedVersions.json5
+++ b/.renovate/allowedVersions.json5
@@ -16,5 +16,10 @@
       matchPackageNames: ["postgres"],
       allowedVersions: "<18",
     },
+    {
+      matchDatasources: ["helm", "docker"],
+      matchPackageNames: ["postgres"],
+      allowedVersions: "<18",
+    },
   ],
 }
